--- a/urlDemo/templates/form.html
+++ b/urlDemo/templates/form.html
@@ -2,14 +2,25 @@
 
 {% block user %}
   
-<form>
-  Number 1: <input type="text" name="num1"><br>
-  Number 2: <input type="text" name="num2"><br>
+<div class="container ">
+  <form method="post">
+    {% csrf_token %}
+    <div class="mb-3 mt-3">
+      <label for="email" class="form-label">num1:</label>
+      <input type="text"  name="num1">
+    </div>
+    <div class="mb-3">
+      <label for="pwd" class="form-label">num2:</label>
+      <input type="text"  name="num2">
+    </div>
+    
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+  
+  <input type="text" value="{{output}}" class="main">
+</div>
 
-  <button type="submit">save</button>
-</form>
 
-<input type="text" value="{{output}}">
 {% endblock user %}
   
 
